# speedrunapi

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  category_test.py  game_data_test.py  mkdocs.yml  pyproject.toml  requirements.txt  user_data_test.py
docs/: categories.md  conf.py  errors.md  game.md  index.md  instalation.md  leaderboard.md  levels.md  mkdocs.yml  regions.md  runs.md  translation.md  user.md
site/: 404.html  index.html  search.html
site/game/: index.html
site/instalation/: index.html
site/search/: search_index.json
site/user/: index.html
speedrunapi/: __init__.py  categories.py  errors.py  game_data.py  leaderboard.py  levels.py  regions.py  runs.py  speedrunapi.py  translation.py  user_data.py
speedrunapi.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
speedrunapi/data/: game_data.py  runs.py  user_data.py
tests/: category_test.py  game_data_test.py  leaderboard_test.py  levels_test.py  region_test.py  runs_test.py  translations_test.py  user_data_test.py
