[build-system]
requires = ["setuptools>=61.0", "mkdocs>=1.4.2"]
build-backend = "setuptools.build_meta"

[project]
name = "speedrunapi"
version = "0.4.1"
authors = [
  { name="Connor (fishin_rod)" },
]
description = "A library for working with speerun.coms API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/fishin-rod/speedrunapi"
"Bug Tracker" = "https://github.com/fishin-rod/speedrunapi/issues"